style.css
/* Website colors: 
#E9E5F5 - gray 
#F0B4FF - light purp
#ea99fd; - purp
#B4F6FF - blue
 */

body{
    background-color: #B4F6FF;
    font-family: 'Trebuchet MS', sans-serif;
    margin: 0px;
    overflow-x: hidden;
}

.nav-bar {
    overflow: hidden;
    position: sticky;
    top: 0;
    z-index: 1000;
    width: 100%;
    box-shadow: 10px 5px 20px rgb(0 0 0 / 70%);
}

.main-nav {
    float: right;
    display: block;
    text-transform: uppercase; 
    padding-right: 20px;
    margin-top: 20px;  
    word-spacing: 15px;
    z-index: 1000;
    font-weight: bold;
    color:black;

}

.nav-burger {
    overflow: hidden;
    position: sticky;
    box-shadow: 10px 5px 20px rgb(0 0 0 / 70%);
    background-color: #F0B4FF;
}

.nav-burger-content {
    display: flex;
    flex-direction: column; 
    align-items: center;
    text-transform: uppercase; 
    word-spacing: 15px;
    font-weight: bold;
    padding: 20px;


}


/* if the device has a screen with a width of 750px or less, will hide the nav */
@media only screen and (max-width: 750px) {
    .nav-bar {
        display: none;
    }
    .text-block {
        top: 5vw;

    }
}

@media only screen and (min-width: 750px) {
    .nav-burger {
        display: none;
    }
}

#home-nav:hover, #hobbies-nav:hover, #future-nav:hover, #experience-nav:hover, #project-nav:hover, #contact-nav:hover, #life-nav:hover {
    background-color: #ea99fd;
    padding: 10px;
    border-radius: 5px;
    font-size: 15px;
    font-weight: bold;
}


, #home-nav#hobbies-nav, #future-nav, #experience-nav, #project-nav, #contact-nav, #life-nav {
    transition: 0.2s;
    padding: 5px;
}

a {
    text-decoration: none;
    color:black;
}


.nav-background{
    background-color: #F0B4FF;
    height: 60px;
    width:100%;

}

#logo {
    width: 85px;
    padding-top: 5px;
    padding-left: 5px;
}

#hero-img{
    width: 100%;
    box-shadow: 10px 5px 20px rgb(0 0 0 / 50%);
}

.img-container{
    position: relative;
}

.text-block{
    position: absolute;
    top: 15vw;
    left: 40px;
    background-color: white;
    color: black;
    padding-left: 20px;
    padding-right: 20px;
    border: 1px solid;
    font-size: 2.5vw;
    opacity: 0.6;
    box-shadow: 10px 5px 20px rgb(0 0 0 / 100%);
}

.about-me-section{
    margin-top: 20px;
    padding-left: 20px;
    width:100%;
    background-color: #E9E5F5;
    font-family: 'Trebuchet MS', sans-serif;
    padding-bottom: 50px;
    padding-top: 50px;
    box-shadow: 10px 5px 20px rgb(0 0 0 / 50%);
}

.about-me-span{
    display: flex;
    flex-direction: row;
    justify-content: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    
}

.about-me-text {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
}

#about-me-paragraph{
    margin-top:40px;
    max-width: 300px;
    overflow: hidden;
    font-size: 20px;
    
}

#about-me-title{
    padding:20px;
    background-color: #F0B4FF;
    width: 150px;
    margin-bottom: 20px;
    box-shadow: 5px 5px 20px rgb(0 0 0 / 40%);
}

#about-me-pic{
    width: 425px;
    height: 350px;
    box-shadow: 5px 5px 20px rgb(0 0 0 / 60%);

    
}

.contactbar {
    background-color: #F0B4FF;
    height: 100px;
    padding-top: 20px;
    margin-top: 20px;
    height: 60px;
    display: block;
    bottom: 0;
    left: 0;
    right: 0;
    height: 50px;
    width: 100%;
    text-align: center;
    padding-bottom:10px;
    box-shadow: 5px 5px 20px rgb(0 0 0 / 60%);
}

.discord, .insta, .email, .linkedin, .github { 
    font-size: 40px;
    color: white;
    margin-left: 20px;
    margin-top: 100px;
    margin-bottom: -40px;

